Netdisco/share/public/css/netdisco.css
/* ... */
.qtip-content {
  padding-bottom: 0px;
  line-height: 8px;
}

/* for where min-width is set but we don't want it */
.nd_no-min-width {
  min-width: 0px;
}

/* for when hidden modals interfere with mouse actions on higher elements */
.nd_deep-horizon {
  z-index: -1000;
}

/* for when we pinch h4 styling but don't want bold */
.nd_unbolden {
  font-weight: normal;
}

/* for System Information bar */
.nd_sysinfo-heading {
  background-color: #eeeeee;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles to adjust the hero box used for homepage + login */

/* space between hero box and navbar */
.nd_hero-row {
  margin-top: 50px;
}

/* alter proportions of hero unit to make it "tighter" on content */
.hero-unit {
  padding: 30px 60px 40px 90px;
}

/* push user/pass/login form down+away from the Netdisco banner text */
.nd_login-form {
  margin-top: 15px;
  margin-bottom: 0px;
}

#nd_home-advanced-toggle {
  font-size: 13px;
}


/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles for device inventory */

.nd_inventory-table-head {
  text-align: center;
  color: lightSlateGray;
  margin-top: 6px;
  margin-bottom: 3px;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles for links in results tables */

/* make the whole cell become a hyperlink in results table */
.nd_linkcell {
  display: block;
  padding: 0px;
  height: 100%;
}

/* still a link, but styled like normal text */
.nd_stealth-link {
  text-decoration: none !important;
  color: #404040;
}

/* nudge cell content to the right when port_control controls are enabled */
.nd_editable-cell > .nd_this-port-only {
  margin-left: 14px;
  margin-right: 35px;
}
.nd_editable-cell > .nd_port-only-first {
  margin-left: 5px;
}

.nd_editable-cell > .nd_editable-cell-content {
  margin-right: 25px;
}

/* nudge cell content when port_control controls are disabled to make room
   for log button */
.nd_this-port-only {
  margin-right: 15px;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles to position table cell content */

.table td {
  vertical-align: baseline;
}

.table .nd_center-cell {
  text-align: center;
}

td.nd_devport-icon i {
  line-height: 18px;
}

/* undo nd_center-cell when in a modial dialog (which lives in table cell) */
.table .nd_center-cell .modal-body {
  text-align: left;
}

/* fix layout of form fields inside the (topology) table */
td div.input-append {
  margin-bottom: 0px;
}

/* admin buttons in the device details view */
td > form.nd_inline-form {
  margin-bottom: 2px;
}

/* fix layout of form fields inside the (pseudo devices) table */
.nd_center-cell input {
  margin-bottom: 0px;
}

/* with two forms inside one cell, make the submit buttons side-by-side */
.nd_inline-form {
  display: inline;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles for "tabs" and surrounding content */


/* add a small bottom margin (gutter) below all pages */
#nd_search-results {
  margin-bottom: 10px;
}

/* group device and download icons on the right */
#nd_search-results-right {
  float: right;
  margin-bottom: 0px;
  margin-top: 9px;
}

/* for any label which we want to appear alongside tabs, floated to the right */
#nd_device-name {
  font-weight: bold;
  color: #6D5720;
}

/* reset to normal weight for the download as CSV icon */
#nd_csv-download {
  font-weight: normal;
}

#nd_csv-download:hover, #nd_sidebar-reset-link:hover {
  text-decoration: none;
}

/* for the job control admin page play/pause links */
#nd_countdown-refresh:hover, #nd_countdown-control:hover {
  text-decoration: none;
}

/* when there's only one tab (report, task etc) change the text color */
.nd_single-tab {
  color: rgb(187,112,0) !important;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* style for port table node list */
.nd_node-list {
  margin: 0;
}

.nd_node-list li {
  list-style: none;
  white-space: nowrap;
}

.nd_node-ip-list li {
  list-style: disc;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* style for port_control controls */

/* edit icon in details tab is in the label (not content) cell so nudge to RHS*/
.nd_device-details-edit {
  float: right !important;
  font-size: 14px;
}

/* port admin up/down control */
.nd_edit-icon, .nd_hand-icon {
  cursor: pointer;
  float: right;
  display: none;
}

.nd_hand-icon {
  margin-right: 4px;
}

/* port admin log view */
.nd_log-icon {
  cursor: pointer;
  color: black;
  float: right;
  padding-left: 10px;
  margin-top: 2px;
}
.nd_log-icon:hover, .nd_log-icon:focus {
  text-decoration: none;
  color: black;
}

/* port power control */
.nd_power-icon {
  cursor: pointer;
}

/* the port power icon, whether it's on or off */
.icon-off {
  vertical-align: middle;
  color: darkRed;
}

/* change color of icon from default of red (which is OK for power-off) */
.nd_power-on {
  color: darkGreen;
}

/* style of editable content in any table - yellow background */
[contenteditable]:focus {
  background: #FFFFD3 !important;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* styles for collapsing lists - sidebar or main table cell content */

/* sidebar collapser is clickable and deep grey */
.nd_collapser {
  cursor: pointer;
  color: #0088CC;
}

/* vlans collapser also clickable and deep grey but with no link styling */
.nd_collapse-vlans {
  cursor: pointer;
  color: #0088CC;
  text-decoration: none !important;
}

/* set default state of collapsible lists as collapsed (hidden) */
.nd_collapse-pre-hidden {
  display: none;
}

/* for the tagged vlans total when hiding the full list */
.nd_vlan-total {
  float: right;
}

/* little up/down chevron to the right of some collapsed list */
.nd_arrow-up-down-right {
  float: right;
  margin-top: 1px;
  margin-right: 1px;
  color: #555;
}
/* ... */

